Fix unit file to read HOME env variable

--- a/gcp-sql-proxy/.config/systemd/user/gcp-sql-proxy@.service
+++ b/gcp-sql-proxy/.config/systemd/user/gcp-sql-proxy@.service
@@ -2,7 +2,7 @@
 Description=GCP SQL Proxy to %I
 
 [Service]
-ExecStart=/home/voytech/.local/bin/gcp-sql-proxy %I
+ExecStart=/usr/bin/bash -c '${HOME}/.local/bin/gcp-sql-proxy %I'
 Restart=on-failure
 RestartSec=60
 
